docs/v0.3.0/_sources/version-history.rst.txt
Version History
===============

.. note::
    All versions of documentation are left in the condition
    in which they were generated. At times, the navigation may
    look different than expected. 

In an effort to keep history of all the documentation
for SnakeMD, we've included all old versions below
as follows:

* `v0.3.0 <https://snakemd.therenegadecoder.com/v0.3.0/>`_
    * Gave documentation a major overhaul
    * Added support for paragraphs in MDList
    * Added is_text() method to Paragraph
    * Fixed issue where punctuation sometimes rendered with an extra space in front

* `v0.2.0 <https://snakemd.therenegadecoder.com/v0.2.0/>`_
    * Added support for horizontal rules
    * Added automated testing through PyTest and GitHub Actions
    * Added document verification services
    * Added documentation link to README as well as info about installing the package
    * Fixed table of contents single render problem
    * Added a feature which allows users to insert links in existing paragraphs

* `v0.1.0 <https://snakemd.therenegadecoder.com/v0.1.0/>`_
    * Added support for links, lists, images, tables, code blocks, and quotes
    * Added a table of contents feature
